# SKC-Site

./: .gitignore  AGENTS 3.md  AGENTS.md  COMPREHENSIVE_ANALYSIS.md  N8N-AZURE-DEPLOYMENT.md  README.md  cleanup-n8n-azure.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: SETUP_SUMMARY.md
.claude/commands/: ALL_COMMANDS_SUMMARY.md  CUSTOM_COMMANDS_GUIDE.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  analyze.md  build.md  cleanup.md  deploy.md  design.md  dev-setup.md  document.md  estimate.md  explain.md  git.md  improve.md  index.md  init.md  load.md  migrate.md  spawn.md  start-task.md  task.md  test-hello.md  test.md  troubleshoot.md  workflow.md
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/governance/: README.md
.github/profile/: README.md
.github/workflows/: reusable-release.yml
SK Website Test/: README.md  index.html
SK Website Test/css/: design-system.css  layout.css
SK Website Test/skc-fullstack/: README.md  package-lock.json  package.json
SKC Website Codex/: PROJECT_DOCUMENTATION.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
SKC Website Codex/public/: sitemap.xml
apps/giga-site/: components.json  next.config.ts  package.json  vitest.config.ts  vitest.setup.ts
archive/: README.md
assets/: README.md
docs/: README.md  init.md  vercel-skc-site.md
intune-labs-codebase-20251001/templates/sdk-python-template/: pyproject.toml
intune-labs-codebase-20251001/templates/sdk-python-template/.github/workflows/: release.yml
scripts/: README.md
(+248 files in other folders)
